@@ -1,3 +1,7 @@
+Sat May  7 16:35:02 2005  Nick Burrett  <nick@sqrt.co.uk>
+
+	* features.h (__ULIBC_MINOR__): Bump version to 1.
+
 Sat May  7 16:08:52 2005  Stefan Bellon  <sbellon@sbellon.de>
 
 	* signal/post.c (sigsetup): Casting fixes for Norcroft compatibility
